added backgound color and slamon pic.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
   </head>
   <body>
     <header>
+      <div id="wrapperHeader">
+      <div id="header">
+               <img src="img/salmon.png" width="1000" height="200" alt="logo" />
+      </div>
       <h1>Your source for Salmon Cookies!</h1>
+  </div>
+
     </header>
     <div id='location'>
       <h4>Check out one of our convient locations</h4>
