--- a/sales.html
+++ b/sales.html
@@ -26,6 +26,12 @@
       <h3 id="alkih3"></h3>
       <ul id="alkiul"></ul>
     </div>
-  <script src= "assets/js/app.js" type="text/javascript"></script>
+
+    <div>
+      <table id="cookiestands">
+        
+      </table>
+    </div>
+  <script src= "assets/js/app2.js" type="text/javascript"></script>
   </body>
 </html>
