Fixed the form to add the appropraite info values from the form to the generated table

--- a/sales.html
+++ b/sales.html
@@ -8,19 +8,19 @@
     <form id="store-form">
       <fieldset>
         <legend>Add Store Location</legend>
-        <label for="storename">Name of Location: </label>
-        <input name="storename" type="text" />
+        <label for="storeName">Name of Location: </label>
+        <input name="storeName" id="storeName" type="text" />
         </br>
-        <label for="mincust">Minimum Customers per Hour: </label>
-        <input name="mincust" type="text" />
+        <label for="minCust">Minimum Customers per Hour: </label>
+        <input name="minCust" id="minCust" type="text" />
         </br>
-        <label for="maxcust">Maximum Customers per Hour: </label>
-        <input name="maxcust" type="text"/>
+        <label for="maxCust">Maximum Customers per Hour: </label>
+        <input name="maxCust" id="maxCust" type="text"/>
         </br>
-        <label for="avgcook">Average Cookies per Sale: </label>
-        <input name="avgcook" type="text"/>
+        <label for="avgCook">Average Cookies per Sale: </label>
+        <input name="avgCook" id="avgCook" type="text"/>
         </br>
-        <button type="submit">Create a new store</button>
+        <button type="submit" id="btn">Create a new store</button>
       </fieldset>
     </form>
 
