somewhat fixed new location entry form script.

--- a/sales.html
+++ b/sales.html
@@ -9,18 +9,18 @@
       <fieldset>
         <legend>Add Store Location</legend>
         <label for="storename">Name of Location: </label>
-        <input name="storename" type="text" />
+        <input id="storename" name="storename" type="text" />
         </br>
         <label for="mincust">Minimum Customers per Hour: </label>
-        <input name="mincust" type="text" />
+        <input id="mincust" name="mincust" type="text" />
         </br>
         <label for="maxcust">Maximum Customers per Hour: </label>
-        <input name="maxcust" type="text"/>
+        <input id="maxcust" name="maxcust" type="text"/>
         </br>
         <label for="avgcook">Average Cookies per Sale: </label>
-        <input name="avgcook" type="text"/>
+        <input id="avgcook" name="avgcook" type="text"/>
         </br>
-        <button type="submit">Create a new store</button>
+        <button id="createNewStore" type="submit">Create a new store</button>
       </fieldset>
     </form>
 
