--- a/sales.html
+++ b/sales.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Salmon Cookies Sales</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   </head>
   <body>
     <form id="store-form">
