finished most CSS except for index page.

--- a/index.html
+++ b/index.html
@@ -9,40 +9,23 @@
   <body>
     <header>
       <div id="wrapperHeader">
-      <div id="header">
-               <img src="img/salmon.png" width="1000" height="200" alt="logo" />
+        <div id="header">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="process.html">Our Process</a></li>
+            <li><a href="contact.html">Contact/Locations</a></li>
+            <li><a href="about.html">About</a></li>
+          </ul>
+        </div>
+        <div id="header-p2">
+          <h1 id="header-message">Youre source for Salmon Cookies, <br> Whether you wanted them or not.</h1>
+        </div>
       </div>
-      <h1>Your source for Salmon Cookies!</h1>
-  </div>
     </header>
-    <div id='location'>
-      <h4>Check out one of our convient locations</h4>
-        <ul>First and Pike</ul>
-        <button onclick="showHide1()">Show/Hide</button>
-          <div Id="firstandpikemap">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3198.8759769544417!2d-122.34124385075042!3d47.60818024529434!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906ab2f8fc9713%3A0x8dae7e4a3a7aef94!2s1st+Ave+%26+Pike+St%2C+Seattle%2C+WA+98101!5e0!3m2!1sen!2sus!4v1508011970718" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-          </div>
-
-        <ul>SeaTac Airport</ul>
-        <button onclick="showHide2()">Show/Hide</button>
-        <div Id ="seatacairmap">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30522.743990563737!2d-122.32765273446428!3d47.45376768025366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5490435542eafefd%3A0x99d3d9c4c7dc37b7!2sSeattle-Tacoma+International+Airport!5e0!3m2!1sen!2sus!4v1508012093213" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-        </div>
-        <ul>Seattle Center</ul>
-        <button onclick="showHide3()">Show/Hide</button>
-        <div Id ="seatcentmap">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2689.197764022675!2d-122.35436328431877!3d47.622286894887345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54901545d5e902b1%3A0x809dba0423e59752!2sSeattle+Center!5e0!3m2!1sen!2sus!4v1508012153952" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-        </div>
-        <ul>Capitol Hill</ul>
-        <button onclick="showHide4()">Show/Hide</button>
-        <div Id ="caphilmap">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5378.086299277122!2d-122.32482158758454!3d47.62529249073953!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5490152857c86161%3A0xef487dc6bbc25185!2sCapitol+Hill%2C+Seattle%2C+WA!5e0!3m2!1sen!2sus!4v1508012191293" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-        </div>
-        <ul>Alki</ul>
-        <button onclick="showHide5()">Show/Hide</button>
-        <div Id ="alkimap">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12804.0846602076!2d-122.41297813075371!3d47.57309552873807!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54904089f02ed333%3A0x9aed4b8c925151c0!2sAlki%2C+Seattle%2C+WA+98116!5e0!3m2!1sen!2sus!4v1508012223450" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-      </div>
+    <div id='content'>
+      <h4>Welcome to our Store Page!</h4>
+        <img src="assets/img/fish.jpg" alt="Fish pic.">
+        <img src="assets/img/shirt.jpg" alt="Shirt pic.">
     </div>
 
     <footer>
