--- a/sales.html
+++ b/sales.html
@@ -7,6 +7,23 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   </head>
   <body>
+    <header>
+      <div id="wrapperHeader">
+        <div id="header">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="news.asp">News</a></li>
+            <li><a href="contact.asp">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+          </ul>
+        </div>
+        <div id="header-p2">
+
+          <h1 id="header-message">Youre source for Salmon Cookies, <br> Whether you wanted them or not.</h1>
+        </div>
+      </div>
+    </header>
+    <div id='content'>
     <form id="store-form">
       <fieldset>
         <legend>Add Store Location</legend>
@@ -31,6 +48,7 @@
 
       </table>
     </div>
+  </div>
   <script src= "assets/js/app.js" type="text/javascript"></script>
   </body>
 </html>
